2005-11-21  Mark Wielaard  <mark@klomp.org>

	* javax/swing/plaf/basic/BasicComboBoxUI.java (cachedMinimumSize):
	Document.
	(isMinimumSizeDirty): Likewise. And initialize to true.
	(getMinimumSize): Use and set cachedMinimumSize.
	(FocusHandler.focusGained): Set isMinimumSizeDirty to true.
	(FocusHandler.focusLost): Likewise.
	(ItemHandler.itemStateChanged): Likewise.
	(ListDataHandler.contentsChanged): Likewise.
	(ListDataHandler.intervalAdded): Likewise.
	(ListDataHandler.intervalRemoved): Likewise.
	(PropertyChangeHandler.propertyChange): Likewise.

2005-11-21  Jan Roehrich  <jan@roehrich.info>

	* java/awt/datatransfer/DataFlavor.java: more code style
	fixes. Changed order to static attributes, attributes, static
	methods, constructors, methods. Moved static part into static 
	attribute declaration.

2005-11-21  Lillian Angel  <langel@redhat.com>

	PR classpath/PR24937
	* gnu/java/awt/peer/gtk/GdkGraphics.java
	(drawString): Removed most non-printable characters
	from the string that will be drawn. Added a FIXME comment
	because may not have filtered out all characters.

2005-11-21  Mark Wielaard  <mark@klomp.org>

	* javax/swing/JTable.java (propertyChange): Only resize header when
	not null.

2005-11-21  Lillian Angel  <langel@redhat.com>

	PR classpath/PR24872
	* javax/swing/text/DefaultEditorKit.java
	(actionPerformed): Implemented.
	(actionPerformed): Implemented.
	(actionPerformed): Implemented.
	(actionPerformed): Implemented.
	* javax/swing/text/JTextComponent.java
	(JTextComponent): Added key bindings for cut, copy,
	paste, selectionBackwardAction, selectionForwardAction.

2005-11-21  Anthony Balkissoon  <abalkiss@redhat.com>

	Fixes bug #24925
	* javax/swing/text/DefaultEditorKit.java:
	(DefaultKeyTypedAction.actionPeformed): Call replaceSelection here
	instead of insertString and only do so if the text component is both 
	enabled and editable.

2005-11-21  Roman Kennke  <kennke@aicas.com>

	* javax/swing/RepaintManager.java